# Coronan

./: CMakeLists.txt  README.MD  conanfile.txt
.github/workflows/: ci.yml
apps/cli/: CMakeLists.txt
apps/qt/: CMakeLists.txt  mainwindow.cpp
src/: CMakeLists.txt  corona-api_parser.cpp
tests/: CMakeLists.txt
